fix: little change, alignement and br

--- a/custom.css
+++ b/custom.css
@@ -4,7 +4,7 @@
     grid-gap: 10px;
     /* grid-auto-rows: minmax(100px, auto); */
 
-    font-family: var(--ff-sans);
+    font-family: var(--ff-sans), serif;
 }
 .one {
     grid-column: 1;
@@ -20,6 +20,11 @@
     grid-column: 1 / 3;
     grid-row: 2;
     /* background-color: cadetblue; */
+}
+
+.align-right {
+    float: right;
+    margin-right: 50px;
 }
 
 .phone {
@@ -88,7 +93,7 @@ blockquote p::after {
 }
 
 body {
-    font-family: var(--ff-serif);
+    font-family: var(--ff-serif), serif;
     max-width: 1100px;
     margin: auto;
 
